Add functionality to header.

--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -1,3 +1,10 @@
-<p>
-  header works!
-</p>
+<mat-toolbar fxLayout fxLayoutAlign="space-between center">
+       
+  <span fxLayout="row" fxLayoutAlign="center center" fx fxLayoutGap="20px">
+    <span>     
+      <button mat-icon-button (click)="onToggleSidenav()">
+        <mat-icon>menu</mat-icon>
+      </button>
+    </span>
+  </span>
+</mat-toolbar>
