--- a/src/app/navigation/container/container.component.html
+++ b/src/app/navigation/container/container.component.html
@@ -1,3 +1,14 @@
-<p>
-  container works!
-</p>
+<mat-sidenav-container>
+  <mat-sidenav mode="push" #sidenav role="navigation" [ngStyle]="{'background-color':'#1522a8'}">
+    <app-sidenav-list (closeSidenav)="sidenav.close()"></app-sidenav-list>
+  </mat-sidenav>
+  <mat-sidenav-content>
+    <app-header
+      (sidenavToggle)="sidenav.toggle()"></app-header>      
+    
+    <router-outlet></router-outlet>
+    
+    <!-- <app-plus-button *ngIf="isEmployee | async">
+    </app-plus-button> -->
+  </mat-sidenav-content>
+</mat-sidenav-container>
