--- a/src/app/navigation/container/container.component.html
+++ b/src/app/navigation/container/container.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container>
-  <mat-sidenav mode="push" #sidenav role="navigation" [ngStyle]="{'background-color':'#1522a8'}">
+  <mat-sidenav mode="push" #sidenav role="navigation">
     <app-sidenav-list (closeSidenav)="sidenav.close()"></app-sidenav-list>
   </mat-sidenav>
   <mat-sidenav-content>
