Add links to views.

--- a/src/app/navigation/sidenav-list/sidenav-list.component.html
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.html
@@ -1,6 +1,9 @@
 <mat-nav-list fxLayout="column" 
 fxLayoutAlign="flex-start"    
 class="nav-list" >
+<a mat-list-item routerLink="/device-monitor" (click)="onClose()">Monitor</a>
+<a mat-list-item routerLink="/device-create" (click)="onClose()">Crear dispositivo</a>
+<a mat-list-item routerLink="/" (click)="onClose()">Cerrar sesión</a>
 <!-- <a mat-list-item class="item-color"       
   *ngIf="newsEnabled"
   (click)="onClose()"
