Change background color.

--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -29,6 +29,10 @@ img{
   height: 150px;
 }
 
+mat-toolbar {
+  background-color: #3f51b5;
+}
+
 // mat-toolbar{
 //   position: fixed;
 //   top: 0px;
