Obtain info from database.

--- a/src/app/device/device-list/device-list.component.html
+++ b/src/app/device/device-list/device-list.component.html
@@ -1,3 +1,56 @@
-<p>
-  device-list works!
-</p>
+<div class="container" fxLayout="column" fxLayoutAlign="start center">
+  <div class="deviceList"
+    fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="gappx">
+    <h1>Lista de dispositivos</h1>
+    <button mat-raised-button routerLink="/device-monitor">Ir al monitor</button>
+  </div>
+  <mat-card>
+    <mat-table #table1
+        [dataSource]="dataSource" matSort>
+        
+        <ng-container matColumnDef="name">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Nombre</mat-header-cell>
+          <mat-cell *matCellDef="let element" routerLink="/device/{{element.id}}">
+            {{element.name}}
+          </mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="location">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Ubicación</mat-header-cell>
+          <mat-cell *matCellDef="let element">
+            {{element.location}}
+          </mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="temperature">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Temperatura</mat-header-cell>
+          <mat-cell *matCellDef="let element">
+            <mat-progress-bar
+              mode="determinate"
+              [value]="element.temperature">
+            </mat-progress-bar>
+          </mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="humidity">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Humedad</mat-header-cell>
+          <mat-cell *matCellDef="let element">
+            <mat-progress-bar
+              mode="determinate"
+              [value]="element.humidity">
+            </mat-progress-bar>
+          </mat-cell>
+        </ng-container>
+        
+        <ng-container matColumnDef="status">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>Estado</mat-header-cell>
+          <mat-cell *matCellDef="let element">
+            <button mat-icon-button *ngIf="element.status" disabled><mat-icon style="color: #5ff442">brightness_1</mat-icon></button>
+            <button mat-icon-button *ngIf="!element.status" disabled><mat-icon style="color: #ef0404">brightness_1</mat-icon></button>
+          </mat-cell>
+        </ng-container>
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row class="pointer" *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    </mat-table>
+  </mat-card>
+</div>
