--- a/src/app/device/device-create/device-create.component.html
+++ b/src/app/device/device-create/device-create.component.html
@@ -1,3 +1,35 @@
-<p>
-  device-create works!
-</p>
+<form (ngSubmit)="onCreateDevice(f)" #f="ngForm" 
+  fxLayout="column" fxLayoutAlign="start center" fxLayoutGap="gappx">
+  <div class="deviceList"
+    fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="gappx">
+      <h1>Crear dispositivo</h1>
+      <button mat-raised-button routerLink="/device-list">CANCELAR</button>
+  </div>
+    <mat-card fxLayout="column">
+      <mat-form-field>
+        <input matInput placeholder="Nombre del dispositivo"
+          name="name" #name="ngModel" ngModel>
+      </mat-form-field>
+      
+      <mat-form-field>
+        <input matInput placeholder="Ubicación"
+          name="location" #location="ngModel" ngModel>
+      </mat-form-field>
+      
+      <mat-slide-toggle name="isMonitorized">
+        ¿Es monitoreado?</mat-slide-toggle>        
+      
+      <mat-form-field *ngIf="wasCreated">
+        <input matInput placeholder="Código de dispositivo" disabled
+          name="id" #id="ngModel" ngModel
+          [(ngModel)]="newId">
+      </mat-form-field>
+
+      <button mat-raised-button fxFlexAlign=" flex-end">CREAR</button>
+
+      <button mat-raised-button 
+        routerLink="/device-list"
+        *ngIf="wasCreated" 
+        type="button">TERMINAR</button>
+    </mat-card>
+  </form>
