Improve responsive design.

--- a/src/app/device/device-edit/device-edit.component.html
+++ b/src/app/device/device-edit/device-edit.component.html
@@ -47,6 +47,6 @@
       [(ngModel)]="currentDevice.id">
     </mat-form-field>
     
-    <button mat-raised-button>Editar</button>
+    <button mat-raised-button fxFlexAlign=" flex-end">Editar</button>
   </mat-card>
 </form>
