--- a/src/app/navigation/sidenav-list/sidenav-list.component.scss
+++ b/src/app/navigation/sidenav-list/sidenav-list.component.scss
@@ -7,7 +7,9 @@
 .nav-list{
   height: 100%;
   // padding-top: 10px;
-  background-color: #3f51b5;;
+  background-color: #3f51b5;
+  color: white;
+  padding-top: 50px;
 }
 
 .nav-caption{
@@ -16,4 +18,16 @@
 
 .item-color{
   color: #FFFFFF;
+}
+
+a, span, .mat-list-item {
+  color: white;
+}
+
+mat-list-item {
+  color: white;
+}
+
+mat-icon {
+  padding-right: 20px;
 }
