--- a/src/app/navigation/header/header.component.scss
+++ b/src/app/navigation/header/header.component.scss
@@ -33,8 +33,6 @@ mat-toolbar {
   background-color: #3f51b5;
 }
 
-// mat-toolbar{
-//   position: fixed;
-//   top: 0px;
-//   z-index: 100;
-// }
+span {
+  color: white;
+}
