--- a/src/app/device/device-edit/device-edit.component.html
+++ b/src/app/device/device-edit/device-edit.component.html
@@ -6,7 +6,7 @@
     <div class="deviceList"
       fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="gappx">
       <h1>Editar dispositivo</h1>
-      <button mat-raised-button routerLink="/device-list">CANCELAR</button>
+      <button mat-raised-button routerLink="/">CANCELAR</button>
     </div>
     <mat-card fxLayout="column">
       <mat-form-field>
