--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,6 +16,6 @@
       placeholder="Contraseña" type="password">
     </mat-form-field>
     <button mat-raised-button [disabled]="!f.valid"
-      type="button" routerLink="/device-list" color="primary">Acceder</button>
+      type="button" routerLink="/" color="primary">Acceder</button>
   </div>
 </form>
