--- a/src/app/device/device-monitor/device-monitor.component.html
+++ b/src/app/device/device-monitor/device-monitor.component.html
@@ -1,10 +1,10 @@
 <div class="container" fxLayout="column" fxLayoutAlign="start center">
   <mat-spinner *ngIf="!isLoaded"></mat-spinner>
   <h1 *ngIf="isLoaded">Monitor de dispositivos</h1>
-  <div *ngIf="isLoaded">
+  <div *ngIf="isLoaded" class="cardsContainer" fxLayout="column" fxLayoutGap="30px">
     <mat-card *ngFor="let device of allDevices" fxLayout="column">
-      <h2>{{device.name}}</h2>
-      <div fxLayout="row" fxLayoutAlign="start start" fxLayoutGap="gappx">
+      <h2 *ngIf="device.status">{{device.name}}</h2>
+      <div fxLayout="row" fxLayoutAlign="start start" *ngIf="device.status">
         <div fxLayout="column" fxLayoutAlign="flex-end center" *ngIf="device.status">
           <h3>Temperatura</h3>
           <!-- Si está debajo del límite -->
@@ -12,28 +12,30 @@
           matTooltip="{{device.temperature}}"
           mode="determinate"
           value="{{device.temperature}}">
-        </mat-progress-bar>
-        <!-- Si está encima del límite -->
-        <mat-progress-bar *ngIf="device.temperature > device.temperatureLimit"
+          </mat-progress-bar>
+          <!-- Si está encima del límite -->
+          <mat-progress-bar *ngIf="device.temperature > device.temperatureLimit"
+            mode="determinate"
+            matTooltip="{{device.temperature}}"
+            color="warn"
+            value="{{device.temperature}}">
+          </mat-progress-bar>
+          <div *ngIf="device.status" fxFlexOffset="50px">°C</div>
+        </div>
+        <div fxLayout="column" fxLayoutAlign="end center" *ngIf="device.status">
+          <h3>Humedad</h3>
+          <mat-progress-bar *ngIf="device.humidity < device.humidityLimit"
           mode="determinate"
-          matTooltip="{{device.temperature}}"
-          color="warn"
-          value="{{device.temperature}}">
-        </mat-progress-bar>
-      </div>
-      <div fxLayout="column" fxLayoutAlign="end center" *ngIf="device.status">
-        <h3>Humedad</h3>
-        <mat-progress-bar *ngIf="device.humidity < device.humidityLimit"
-        mode="determinate"
-        matTooltip="{{device.humidity}}"
-        value="{{device.humidity}}">
-      </mat-progress-bar>
-      <mat-progress-bar *ngIf="device.humidity > device.humidityLimit"
-        mode="determinate"
-        matTooltip="{{device.humidity}}"
-        color="warn"
-        value="{{device.humidity}}">
-      </mat-progress-bar>
+          matTooltip="{{device.humidity}}"
+          value="{{device.humidity}}">
+          </mat-progress-bar>
+          <mat-progress-bar *ngIf="device.humidity > device.humidityLimit"
+            mode="determinate"
+            matTooltip="{{device.humidity}}"
+            color="warn"
+            value="{{device.humidity}}">
+          </mat-progress-bar>
+          <div *ngIf="device.status" fxFlexOffset="50px">HR</div>
         </div>
       </div>
     </mat-card>
